Products.CMFCore Changelog
==========================

2.3.0 (unreleased)
------------------

- interfaces: Fixed dotted names by setting __module__ explicitly.

- Skinnable: The skins tool is now looked up as utility.
  'getSkinsFolderName' is no longer supported, that method was removed.

- permissions: Fixed some issues in permissions.zcml. 


2.3.0-beta2 (2012-03-31)
------------------------

- added fixes for migrating CMF 2.2 sites.


2.3.0-beta (2012-03-21)
------------------------

- DynamicType: Modified 'icon' method.
  The specified icon might be registered for a ZTK layer that is not available
  in the ZMI. If the icon can't be found, an empty string is returned.

- exportimport.tests.test_mailhost:  Accomodate 'smtp_queue' and
  'smtp_queue_directory' exports (newly added in GenericSetup).

- tools: Converted all tools into local utilities.

- MemberDataTool: Changed property modes to 'w' and added 'fullname' property.

- setup handlers: Improved content type registry handler.
  The 'insert-before' and 'insert-after' directives are now supported.

- Optimize `SkinnableObjectManager.__getattr__` to short circuit view (`@`) and
  traverser (`+`) lookup in addition to `_` and `aq_`.

- Avoid a shallow dependency on `Products.ZReST`.

- Fixed types tool test to only test creation for type infos.

- utils: Fixed '_OldCacheHeaders' and '_FSCacheHeaders' methods.
  DateTimeErrors caused by invalid HTTP headers were not caught.

- setup handlers: Added export/import support for member data tool settings.

- MemberDataTool: Fixed tool initialization.
  The default boolean and date property values were not set correctly.

- MemberDataTool: Modified 'setProperties' method.
  It now can be used by user managers as well.

- MembershipTool: Added 'isMemberAccessAllowed' method.
  If you don't have the 'Manage users' permission for the membership tool, you
  shouldn't have write access to other members.

- MemberDataTool: Removed obsolete MemberData factory lookup.