@@ -11,6 +11,8 @@ Products.CMFCore Changelog
 
 - permissions: Fixed some issues in permissions.zcml. 
 
+- support unset portal_skins request variables in HTTP headers
+  (see https://dev.plone.org/ticket/10071) [fRiSi]
 
 2.3.0-beta2 (2012-03-31)
 ------------------------
